# neon

./: .gitignore  Cargo.toml  DESIGN.md  README.md  index.html  justfile
.github/workflows/: pages.yml
desktop/: Cargo.toml
desktop/src/: agent.rs  chat.rs  fs.rs  git.rs  highlight.rs  lsp.rs  main.rs  network.rs  pty.rs  relay.rs  tasks.rs
desktop/src/agent/: tools.rs
docs/: ARCHITECTURE.md  feature-backlog.md
docs/book/: README.md  book.toml  justfile
docs/book/src/: SUMMARY.md  architecture.md  building.md  claude-mcp.md  context-menus.md  contexts.md  control-panel.md  editing-surface.md  editor-plugins.md  files.md  find.md  first-plugin.md  glossary.md  installation.md  introduction.md  jumps.md  license.md  lsp-bridge.md  lsp-enabling.md  lsp-features.md  lsp-navigation.md  modal-editing.md  op-vocabulary.md  palette.md  panes-tabs.md  plugin-manager.md  plugin-model.md  protocol.md  reference-commands.md  reference-keybindings.md  reference-ops.md  running.md  scene-plugins.md  scene-stdlib.md  spacemacs-leader.md  theming.md  tour.md  troubleshooting.md  viewport.md  what-neon-is.md
document/: Cargo.toml
document/src/: lib.rs
editor_stdlib/: auto_pairs.rhai  better_escape.rhai  blank_lines.rhai  commentary.rhai  editor_template.rhai  emacs.rhai  join_lines.rhai  jump_to_char.rhai  line_comment.rhai  line_tools.rhai  move_lines.rhai  smart_home.rhai  spacemacs.rhai  vim.rhai  word_motions.rhai
examples/: bouncing_balls.rhai  breathing_sphere.rhai  fireworks.rhai  helix.rhai  lissajous.rhai  orbits.rhai  snowfall.rhai  spiral.rhai  starfield.rhai  wave_grid.rhai
lang/: Cargo.toml
lang/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: diff.rs  lib.rs  lint.rs
public/: styles.css
runtime/: lang_worker.js
src/: app.rs  bridge.rs  caret.rs  check.rs  commands.rs  complete.rs  components.rs  editor_plugins.rs  fs.rs  git.rs  highlight.rs  ipc.rs  jump.rs  lang.rs  lib.rs  lsp.rs  main.rs  multicursor.rs  network.rs  plugins.rs  relay.rs  session.rs  state.rs  storage.rs  tasks.rs  terminal.rs  theme.rs  tiles.rs  tour.rs  treesitter.rs  undo.rs
src/components/: activity_bar.rs  chat.rs  chrome.rs  console.rs  context_menu.rs  control_panel.rs  editor.rs  editor_pane.rs  extensions.rs  file_tree.rs  find.rs  help.rs  jump_overlay.rs  loader.rs  lsp_menus.rs  lsp_panel.rs  multicursor.rs  overlays.rs  palette.rs  panels.rs  plugin_panel.rs  popups.rs  problems.rs  prompt.rs  reference.rs  search.rs  sidebar.rs  status_bar.rs  tasks.rs  terminal.rs  toolbar.rs  tour.rs  viewport.rs  which_key.rs
src/components/chrome/: status_bar.rs  toolbar.rs
src/components/editor/: diagnostics.rs  keys.rs  surface.rs  tab_bar.rs
src/components/overlays/: chat.rs  context_menu.rs  diff_review.rs  help.rs  loader.rs  multicursor.rs  palette.rs  popups.rs  prompt.rs  which_key.rs
src/components/panels/: call_hierarchy.rs  control_panel.rs  lsp_panel.rs  multibuffer.rs  outline.rs  problems.rs  reference.rs  source_control.rs  terminal.rs  type_hierarchy.rs  undo_tree.rs
src/components/sidebar/: extensions.rs  file_tree.rs  plugin_panel.rs
src/lsp/: edits.rs  requests.rs  text.rs  transport.rs
src/state/: panes.rs
worker/: Cargo.toml
worker/src/: lib.rs  screenshot.rs  state.rs  stdlib.rs  systems.rs
worker/src/systems/: manifest.rs  picking.rs  plugins.rs  setup.rs
worker/stdlib/: color.rhai  events.rhai  input.rhai  motion.rhai  random.rhai  shapes.rhai
