[workspace]
members = ["desktop", "protocol", "worker", "lang", "document"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
homepage = "https://github.com/matthewjberger/neon"
repository = "https://github.com/matthewjberger/neon"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package]
name = "neon"
description = "A code editor in Rust with rhai plugins, rust-analyzer, and a live nightshade 3D view"
readme = "README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
protocol = { path = "protocol" }
document = { path = "document" }
wasm-bindgen = "=0.2.115"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
postcard = { version = "1", features = ["alloc"] }
# The hearsay wire types only. Its broker/client/websocket modules are native
# gated, so on wasm this is just the postcard `PeerEvent` contract, no engine.
hearsay = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "NodeList",
    "Range",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "HtmlPreElement",
    "OffscreenCanvas",
    "CssStyleDeclaration",
    "DomRect",
    "DomRectReadOnly",
    "DomTokenList",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "InputEvent",
    "PointerEvent",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "WheelEvent",
    "KeyboardEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Storage",
    "Location",
    "Performance",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "WebSocket",
    "BinaryType",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rhai = { version = "1.23", features = ["sync", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rhai = { version = "1.23", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
