[package]
name = "desktop"
description = "Neon's desktop shell: a wry webview hosting the editor's bridges"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "neon"
path = "src/main.rs"

[features]
default = ["agent"]
# The Claude bridge: the MCP HTTP endpoint, the page relay websocket, and the
# chat relay to a claude subprocess. Runtime gated, the sockets open only when
# the page sends its open-chat signal.
agent = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:serde_json",
    "dep:protocol",
    "dep:rfd",
    "dep:ignore",
    "dep:grep",
    "dep:regex",
    "dep:portable-pty",
    "dep:vt100",
    "dep:dirs",
]

[dependencies]
wry = "0.55"
winit = "0.30"
rust-embed = "8"
tiny_http = "0.12"
protocol = { path = "../protocol", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "process",
    "io-util",
    "fs",
    "macros",
], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
rfd = { version = "0.15", optional = true }
ignore = { version = "0.4", optional = true }
grep = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
portable-pty = { version = "0.8", optional = true }
vt100 = { version = "0.15", optional = true }
dirs = { version = "5", optional = true }
