[package]
name = "desktop"
description = "Neon's desktop shell: a wry webview hosting the editor's bridges"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "neon"
path = "src/main.rs"

[features]
default = ["agent", "networking"]
# Multi-window: the first process hosts a hearsay pub/sub broker and spawns
# more windows as supervised child processes; children join the broker and exit
# when the host does. The page asks for a new window over the webview IPC.
networking = ["dep:hearsay", "dep:tokio"]
# The Claude bridge: the MCP HTTP endpoint, the page relay websocket, and the
# chat relay to a claude subprocess. Runtime gated, the sockets open only when
# the page sends its open-chat signal.
agent = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:serde_json",
    "dep:protocol",
    "dep:rfd",
    "dep:ignore",
    "dep:grep",
    "dep:regex",
    "dep:portable-pty",
    "dep:vt100",
    "dep:dirs",
    "dep:tree-sitter",
    "dep:tree-sitter-highlight",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-json",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-css",
    "dep:tree-sitter-toml-ng",
]

[dependencies]
wry = "0.55"
winit = "0.30"
rust-embed = "8"
tiny_http = "0.12"
protocol = { path = "../protocol", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "process",
    "io-util",
    "fs",
    "macros",
], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
rfd = { version = "0.15", optional = true }
ignore = { version = "0.4", optional = true }
grep = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
portable-pty = { version = "0.8", optional = true }
vt100 = { version = "0.15", optional = true }
dirs = { version = "5", optional = true }
hearsay = { version = "0.1", features = [
    "spawn",
    "websockets",
], optional = true }
# Tree-sitter and its grammars are Rust crates that bundle their C parser and
# build it with `cc`, so they keep the "every dependency is a Rust crate, no
# npm" rule while running natively in the shell, off the page's wasm.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-highlight = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.23", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
