[package]
name = "document"
description = "Neon's rope-backed text document with multiple selections: the engine-agnostic editing core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ropey = "1.6"
