[package]
name = "lang"
description = "Neon's language worker: rhai compile-checking off the render thread"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.115"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["DedicatedWorkerGlobalScope", "MessageEvent"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rhai = { version = "1.23", features = ["sync", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rhai = { version = "1.23", features = ["sync"] }
