[package]
name = "worker"
description = "Neon's engine worker: the nightshade-api facade and offscreen renderer"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
protocol = { path = "../protocol" }
nightshade-api = { path = "../../nightshade/crates/nightshade-api", features = [
    "scripting",
    "picking",
] }
nightshade = { path = "../../nightshade/crates/nightshade", features = [
    "tracing",
    "debug_render",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.115"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Blob",
    "DedicatedWorkerGlobalScope",
    "FileReaderSync",
    "MessageEvent",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "Performance",
] }
